# ragIM

./: .gitignore  README.md  pyproject.toml  requirements.txt  utils.py  参照.py
front/: streamlit_web.py
ragim/: file_utils.py  settings.py  utils.py
ragim/kb_service/: chromadb_service
ragim/ocr_loader/: mydocloader.py  myimgloader.py  mypdfloader.py  ocr.py
ragim/text_splitter/: chinese_text_splitter.py
resources/others/: chat_service.py  utils.py  web_api.py
resources/others/file_service/: file_service.py
resources/others/front/: streamlit_web.py
server/: __init__.py  chromadb_service.py  cli.py  evaluate_utils.py  kb_singleton_util.py  main.py  settings.py  split_by_semantic.py  utils.py
server/A-GHIS/: __init__.py  build_community.py  build_graph.py  community_graph_main.py  ingest_community_graph_to_kb.py  retrieve_and_evaluate.py  visualize_clustering_outcome.py
server/A-GHIS/support/: check_community.py  check_graph.py
server/A-GHIS/workspace/: graph.pkl
server/api/: chat_api.py
server/baseline/: baseline_main.py  evaluate_clustering.py  ingest_chunks_to_kb.py  naive_baseline.py  retrieve_and_evaluate.py  semantic_baseline.py  split_by_semantic.py  ubuntu_naive_split.json  ubuntu_semantic_split.json
server/baseline/model/: naive_baseline.py  semantic_baseline.py
server/baseline/utils/: evaluate_utils.py
server/chat_service/: chat_service.py  utils.py
server/community_graph_model/: build_community_summay.py  build_graph.py  community_graph_main.py  generate_community_summay.py  ingest_community_graph_to_kb.py  retrieve_and_evaluate.py  split_by_semantic.py  split_by_token.py
server/community_graph_model/support/: check_leiden_community_res.py
server/file_service/: file_service.py
server/file_service/ocr_loader/: mydocloader.py  myimgloader.py  mypdfloader.py  mypptloader.py
server/file_service/text_splitter/: chinese_recursive_text_splitter.py  zh_title_enhance.py
server/graph_community_model/: build_community_index.py  build_graph.py
server/graph_hierarchy_model/: build_graph.py  build_hierarchy_graph.py  build_index.py  split_to_chunks.py
server/graph_rag_model/: graphrag_ingest.py  graphrag_query.py
server/kb_service/: chromadb_service.py
server/output/: evaluate_retrieval.py
server/temp/: community_manager.py  entity_extractor.py  model.py  retriever.py
test/: chunk_1.txt  chunk_2.txt  chunk_3.txt
参照/: base.py
(+2397 files in other folders)
