
[tool.poetry]
name = "RagIM"
version = "0.3.0.dev0"
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
ragim = 'ragim.cli:main'


[tool.poetry.dependencies]

python = ">=3.10,<3.12,!=3.9.7"
langchain = { version = "0.1.17", python = ">=3.8.1,<3.12,!=3.9.7" }
langchainhub = "0.1.14"
langchain-community = "0.0.36"
langchain-openai = { version = "0.0.6", python = ">=3.8.1,<3.12,!=3.9.7" }
langchain-experimental = "0.0.58"
langchain-chroma = "0.1.1"
chromadb = "0.5.0"
humanlayer= "0.7.6"
nest_asyncio = "1.6.0"
mcp = ">=1.4.1,<1.5"
fastapi = "~0.109.2"
sse_starlette = "~1.8.2"
nltk = "~3.8.1"
uvicorn = ">=0.27.0.post1"
unstructured = "~0.11.0"
python-magic-bin = {version = "*", platform = "win32"}
SQLAlchemy = "~2.0.25"
faiss-cpu = "~1.7.4"
jieba = "0.42.1"
rank_bm25 = "0.2.2"
openpyxl = "3.1.4"
networkx = "3.1"
opencv-python = "~4.10.0.84"
PyMuPDF = "~1.23.16"
rapidocr_onnxruntime = "~1.3.8"
requests = "~2.32.3"
pathlib = "~1.0.1"
pyjwt = "~2.9.0"
elasticsearch = "*"
numexpr = ">=1" #test
strsimpy = ">=0.2.1"
markdownify = ">=0.11.6"
tqdm = ">=4.66.1"
websockets = ">=12.0"
numpy = "~1.24.4"
pandas = "~1.3.0" # test
pydantic = "~2.11.1"
httpx = {version = "0.27.2", extras = ["brotli", "http2", "socks"]}
python-multipart = "0.0.9"
json_repair = ">=0.30.0"
streamlit = "1.34.0"
streamlit-option-menu = "0.3.12"
streamlit-antd-components = "0.3.1"
streamlit-chatbox = "1.1.12.post4"
streamlit-modal = "0.1.0"
streamlit-aggrid = "1.0.5"
streamlit-extras = "0.4.2"
htbuilder = "0.6.2"
xinference_client = { version = "^0.13.0", optional = true }
pymysql = "^1.1.0"
memoization = "0.4.0"
pydantic_settings = ">=2.3.4"
ruamel_yaml = "0.18.6"
loguru = "^0.7.2"
streamlit-paste-button = "0.1.2"
python-docx = "1.1.2"
python-pptx = "^1.0.2"
urllib3 = "1.26.18"
tokenizers = "0.19.0"
transformers = "4.40.1"
sentence-transformers = "^2.2.2"
zai-sdk = "^0.2.2"

[tool.poetry.extras]
xinference = ["xinference_client"]
ollama = ["ollama"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-plugin-pypi-mirror==0.4.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.dotenv]
ignore = "false"
dotenv = "dotenv:plugin"


# https://python-poetry.org/docs/repositories/
[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
